refactor(proto): drop user-reported program balance
